# pantheon

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  root.vvk
apis/: Cargo.toml
apis/fuzz/: Cargo.toml
apis/fuzz/fuzz_targets/: alloc.rs
apis/src/: boxed.rs  lib.rs
arachne/: Cargo.toml
arachne/src/: adj.rs  lib.rs  map.rs
hades/: Cargo.toml  build.rs  build.vvk  hades.x  memory.x
hades/.cargo/: config
hades/src/: arch.rs  boot.S  dtb.rs  main.rs  page_allocator.rs  page_table.rs  sbi.rs
kernel/: Cargo.toml  build.vvk
kernel/src/: main.rs
kernel/ymir/: build.vvk  test.rs  uart.rs  ymir.ld  ymir.rs  zellij.kdl
libs/: build.vvk
libs/apis/: build.vvk
libs/arachne/: build.vvk
libs/freyr/: build.vvk  lib.rs
libs/itzamna/: build.vvk  lib.rs  quote.rs  quote_proc.rs
libs/macro-rules-attr/: main.rs
libs/ogma/: build.vvk
libs/oshun/: build.vvk  oshun.rs  spin.rs  spin_once.rs  spin_once_lock.rs
libs/sheshat/: README.md  build.vvk
libs/wohpe/: build.vvk  core.rs  core_test.rs  env.rs  qemu.rs  test_child_file.rs
macro-rules-attr/: build.vvk
ogma/: Cargo.toml  build.vvk  virt.dtb
ogma/src/: lib.rs  parsing.rs
oshun/: oshun.rs  spin.rs  spin_lazy.rs  spin_once.rs  spin_once_lock.rs
pantheon-gdb/: apis.py  pantheon_load_apis.py
sheshat/: Cargo.toml  build.vvk
sheshat/derive/: Cargo.toml
sheshat/src/: args.rs  lex.rs  lib.rs
sheshat/tests/: derive.rs
utils/: build.vvk  read_static.rs
vishvakarma/: Cargo.toml  build.vvk
vishvakarma/src/: main.rs
ymir/: build.vvk  sifive_test.rs  test.rs  uart.rs  ymir.ld  ymir.rs
(+36 files in other folders)
